indx.html sayfasıın genel iskeletini oluşturdum. python ile ilgili linkleri içerecek olan pythonçhtml ve requests modülü ile ilgili kod bloğunu içinde barındıran html sayfasını yazdım ve ekledim

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <html>
     <head>
         <title>sayfa basligi</title>
+        <link rel="stylesheet" href="main.css">
     </head>
+    
     <body>
-        <h1>Başlık</h1>
+        <h1>Sinan Örgünün Sayfasına Hoşgeldiniz </h1>
+        <br>
+        <div class="konular" style="font-size: medium;"><h2>Bazı projelerim ve zamanla öğrendiğim  <br>bazı bilgilerim aşağıdaki linklerde mevcuttur.</h2></div>
+    <a href="python.html"><div class="konular">Python</div> </a>   
+         
+
     </body>
 
 </html>
