--- a/python.html
+++ b/python.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>sayfa basligi</title>
-        <link rel="stylesheet" href="main.css">
-    </head>
-    
-    <body>
-    <h1>Python çalismalarımın oldugu sayfa</h1>
-    <a href="python_html/requests_rar_download.html"><div class="konular">python ile Internetten rar dosyası indirme</div></a>
-    
 
-    </body>
+<head>
+    <title>sayfa basligi</title>
+    <link rel="stylesheet" href="main.css">
+</head>
+
+<body>
+    <h1>Python çalismalarımın oldugu sayfa</h1>
+    <div style="width: 50%; margin: auto;">
+        <a href="python_html/requests_rar_download.html" style="width: 50%;">
+            <div class="konular">python ile Internetten rar dosyası indirme</div>
+        </a>
+    </div>
+
+</body>
 
 </html>
