deeplearningbook linki ekledim

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             <div class="konular">Python</div>
         </a>
 
+        <a href="https://www.deeplearningbook.org/">
+            <div class="konular">deeplearningbook</div>
+        </a>
+        
+
        
 
     </div>
