başlıkları değiştirdim sadece

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 
 <body>
-    <h1>Sinan Örgünün Sayfasına Hoşgeldiniz </h1>
+    <h1>Sayfama hoşgeldiniz</h1>
     <br>
     <div style="margin: auto; width: 50%;">
 
         <div class="konular" style="font-size: medium;">
-            <h2>Bazı projelerim ve zamanla öğrendiğim <br>bazı bilgilerim aşağıdaki linklerde mevcuttur.</h2>
+            <h2>Başlıklar</h2>
         </div>
 
         <a href="python.html">
