--- a/python.html
+++ b/python.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Python çalismalarımın oldugu sayfa</h1>
+    <h1>Python çalışmalarım</h1>
     <div style="width: 50%; margin: auto;">
         <a href="python_html/requests_rar_download.html" style="width: 50%;">
             <div class="konular">python ile Internetten rar dosyası indirme</div>
